# neobotix_beerpong

./: .gitmodules  README.md
cad/cup_dispenser/: abstand_zu_neobotix.prt.1  abstand_zu_neobotix.stl  abstand_zu_neobotix.stp  abstand_zu_neobotix__out.log.1  aluprofil.prt.1  becherhalter.prt.1  becherhalter.stl  becherhalter.stp  becherhalter__out.log.1  becherspender_schwerkraft.asm.1  becherspender_schwerkraft.stl  becherspender_schwerkraft__out.log.1  becherspender_schwerkraft__out.log.2  becherspender_schwerkraft_asm.stp  colision.prt.1  colision.stl  colision.stp  rohr.stl  (+9 more)
ros2-packages/neobotix_coordinator/neobotix_coordinator/: CMakeLists.txt  package.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/behaviors/: GrootPalette.xml  NavTest.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/behaviors/applications/: DriveToGoal.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/behaviors/demo/: AipDemo.xml  AipSimulation.xml  MaterialTransport.xml  NeobotixDemo.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/behaviors/examples/: AIPDemo_Bosch_25_vel.xml  AIPDemo_Bosch_3_vel.xml  Grippertest.xml  NavigationDemo.xml  ZylinderTest.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/behaviors/tests/: ArmMovementWithRequest.xml  ArucoTestRealsense.xml  BaseMovementWithRequest.xml  ChooseTableTest.xml  CombinedSystemTest.xml  Copy_UR5_GripCup_move_around copy.xml  Cup_small.xml  GetCupsFromStack.xml  GetCupsFromStackAndPlaceThem.xml  NavigationTest.xml  Select_Table_1.xml  TEST_1206.xml  TestObjectDetection.xml  UR5_GripCup_move_around.xml  URMovementTest.xml  URTest.xml  UserConfirmation.xml  ss24Test.xml
ros2-packages/neobotix_coordinator/neobotix_coordinator/config/: params.yaml
ros2-packages/neobotix_coordinator/neobotix_coordinator/include/neobotix_coordinator/: default.h
ros2-packages/neobotix_coordinator/neobotix_coordinator/include/neobotix_coordinator/actions/: MoveArm.h  MoveBase.h  MoveBaseToTable.h
ros2-packages/neobotix_coordinator/neobotix_coordinator/include/neobotix_coordinator/conditions/: CheckBattery.h  CheckBlackboard.h  CheckBlackboardInt.h  CheckDiagnosticStatus.h  CheckStop.h
ros2-packages/neobotix_coordinator/neobotix_coordinator/include/neobotix_coordinator/nodes/: CalculateOffsets.h  GetTfMarkerToBase.h  SetInitialPose.h  Wait.h
ros2-packages/neobotix_coordinator/neobotix_coordinator/include/neobotix_coordinator/services/: ChooseTable.h  ClearGlobalCostmap.h  ClearLocalCostmap.h  CloseGripper.h  GetArucoPosition.h  MoveArmToJoints.h  MoveArmToPoseLin.h  MoveArmToPosePtp.h  MoveURGripper.h  OpenGripper.h  ParameterRequest.h  PlaceCup.h  SetVelocity.h
ros2-packages/neobotix_coordinator/neobotix_coordinator/launch/: aip.launch.py  aruco.launch.py  cup.launch.py  demo.launch.py  neobotix.launch.py  simulation.launch.py  ss24.launch.py  table.launch.py  test.launch.py  ur.launch.py
ros2-packages/neobotix_coordinator/neobotix_coordinator/src/: node.cpp
ros2-packages/neobotix_coordinator/neobotix_coordinator/src/actions/: MoveArm.cpp  MoveBase.cpp  MoveBaseToTable.cpp
ros2-packages/neobotix_coordinator/neobotix_coordinator/src/conditions/: CheckBattery.cpp  CheckBlackboard.cpp  CheckBlackboardInt.cpp  CheckDiagnosticStatus.cpp  CheckStop.cpp
ros2-packages/neobotix_coordinator/neobotix_coordinator/src/nodes/: CalculateOffsets.cpp  GetTfMarkerToBase.cpp  SetInitialPose.cpp  Wait.cpp
ros2-packages/neobotix_coordinator/neobotix_coordinator/src/services/: ChooseTable.cpp  ClearGlobalCostmap.cpp  ClearLocalCostmap.cpp  CloseGripper.cpp  GetArucoPosition.cpp  MoveArmToJoints.cpp  MoveArmToPoseLin.cpp  MoveArmToPosePtp.cpp  MoveURGripper.cpp  OpenGripper.cpp  PlaceCup.cpp  SetVelocity.cpp
(+153 files in other folders)
